force-app/main/default/objects/Deal_Stress_Test__c/Deal_Stress_Test__c.object-meta.xml
<CustomObject>
    <description>This object is part of the Product build project and is used by BDMs to complete competitive research for their deal. They &quot;stress test&quot; the competitiveness of their deal and refine it as needed. It is a child object to Deal object.</description>
    <label>Deal Stress Test</label>
    <nameField>
        <displayFormat>DST-{00000}</displayFormat>
        <label>Deal Stress Test #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Stress Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>