force-app/main/default/objects/Deal_Stress_Test__c/fields/Activities_Tours_Standards__c.field-meta.xml
<CustomField>
    <fullName>Activities_Tours_Standards__c</fullName>
    <inlineHelpText>Please indicate how this TAD deal compares to this competitor in relation to activities and tour standards.</inlineHelpText>
    <label>Activities / Tours Standards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worse</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
            <value>
                <fullName>Better</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>