force-app/main/default/objects/Deal_Stress_Test__c/fields/Competitor_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1_Name__c</fullName>
    <inlineHelpText>Please list the name of the first competitor you are comparing.</inlineHelpText>
    <label>Competitor #1 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>