force-app/main/default/objects/Deal_Stress_Test__c/fields/Competitor_2_Notes__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2_Notes__c</fullName>
    <label>Competitor #2 Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>