force-app/main/default/objects/Deal_Stress_Test__c/fields/Competitor_2_Rating__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2_Rating__c</fullName>
    <inlineHelpText>Please select the overall rating of the competitor relative to TAD, e.g. if you select &quot;worse&quot;, that means the competitor is worse than TAD.</inlineHelpText>
    <label>Competitor #2 Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Better</fullName>
            </value>
            <value>
                <fullName>Equal</fullName>
            </value>
            <value>
                <fullName>Worse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>