force-app/main/default/objects/Deal_Stress_Test__c/fields/Competitor_4_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_4_Name__c</fullName>
    <inlineHelpText>Please list the name of the fourth company for comparison against TAD.</inlineHelpText>
    <label>Competitor #4 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>