force-app/main/default/objects/Deal_Stress_Test__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <inlineHelpText>Please list the competitor name.</inlineHelpText>
    <label>Competitor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>