force-app/main/default/objects/Deal_Stress_Test__c/fields/Competitor_Deal_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Deal_Price__c</fullName>
    <inlineHelpText>Please input the competitor&apos;s deal price in $AUD.</inlineHelpText>
    <label>Competitor Deal Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>