force-app/main/default/objects/Deal_Stress_Test__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <inlineHelpText>Please list the competitor&apos;s product name.</inlineHelpText>
    <label>Competitor Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>