force-app/main/default/objects/Deal_Stress_Test__c/fields/Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Inclusions__c</fullName>
    <inlineHelpText>Please detail the inclusions, use the rich formatting features of this field to include website links etc.</inlineHelpText>
    <label>Inclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>