force-app/main/default/objects/Deal_Stress_Test__c/fields/Link_to_Competitor_Deal__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Competitor_Deal__c</fullName>
    <inlineHelpText>Please include the direct link to the competitor&apos;s deal.</inlineHelpText>
    <label>Link to Competitor Deal</label>
    <type>Url</type>
</CustomField>