force-app/main/default/objects/Deal_Stress_Test__c/fields/Meals_Standard__c.field-meta.xml
<CustomField>
    <fullName>Meals_Standard__c</fullName>
    <inlineHelpText>Please indicate how this TAD deal compares to this competitor in relation to meals standards.</inlineHelpText>
    <label>Meals Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worse</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
            <value>
                <fullName>Better</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>