force-app/main/default/objects/Deal_Stress_Test__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <inlineHelpText>Please select the rating for the TAD deal relative to the overall ratings from the competitors. By selecting &quot;Stacks&quot; you are approving this deal.</inlineHelpText>
    <label>Overall Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stacks</fullName>
            </value>
            <value>
                <fullName>Parity</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Stack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>