force-app/main/default/objects/Deal_Stress_Test__c/fields/Overall_Rating_Notes__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating_Notes__c</fullName>
    <inlineHelpText>Please provide a short summary of your overall analysis of this stress test.</inlineHelpText>
    <label>Overall Rating Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>