force-app/main/default/objects/Deal_Stress_Test__c/fields/Rack_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rack_Discount__c</fullName>
    <inlineHelpText>This is a percentage field, please enter a number and upon save it will format with &quot;%.&quot;</inlineHelpText>
    <label>Rack Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>