force-app/main/default/objects/Deal_Stress_Test__c/fields/Rack_Summary__c.field-meta.xml
<CustomField>
    <fullName>Rack_Summary__c</fullName>
    <inlineHelpText>Please provide a concise summary of your analysis, such as &quot;$3449 gives us a 30% discount.&quot;</inlineHelpText>
    <label>Rack Summary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>