force-app/main/default/objects/Deal_Stress_Test__c/fields/Real_Discount__c.field-meta.xml
<CustomField>
    <fullName>Real_Discount__c</fullName>
    <inlineHelpText>Please enter in the real discount, for example, &quot;10% Twin&quot; or &quot;6.5% Single.&quot;</inlineHelpText>
    <label>Real Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>