force-app/main/default/objects/Deal_Stress_Test__c/fields/Sell_Summary__c.field-meta.xml
<CustomField>
    <fullName>Sell_Summary__c</fullName>
    <inlineHelpText>Please provide a short summary of your analysis, such as &quot;Sun lover Holidays at $2689 twin and $2836 Single gives us a 10% and 8% discount.&quot;</inlineHelpText>
    <label>Sell Summary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>