force-app/main/default/objects/Deal_Stress_Test__c/fields/TAD_SubOption_Comparison__c.field-meta.xml
<CustomField>
    <fullName>TAD_SubOption_Comparison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the TAD sub-option which is the best comparison for this competitor&apos;s offer.</inlineHelpText>
    <label>TAD Sub-Option Comparison</label>
    <referenceTo>sub_options__c</referenceTo>
    <relationshipLabel>TAD Sub-Option Comparison</relationshipLabel>
    <relationshipName>TAD_SubOption_Comparison</relationshipName>
    <type>Lookup</type>
</CustomField>